tried to fix the header on small screens. best i could do.

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -68,3 +68,19 @@ img {
     transform: scale(1.1);
     transition: ease-in-out 0.3s;
 }
+
+
+@media screen and (max-width: 768px) {
+    #links {
+        font-size: 1rem;
+        height: 40px;
+    }
+}
+
+@media screen and (max-width: 538px) {
+    #links {
+        font-size: .9rem;
+        height: 40px;
+        padding-right: 2px;
+    }
+}
